--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,7 +2,7 @@ server :
   port : 8081
 spring:
   jpa:
-    show-sql: true
+#    show-sql: true
     properties:
       hibernate:
         format_sql : true
