--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -11,15 +11,16 @@ spring:
     username: root
     password: root
     driver-class-name: com.mysql.cj.jdbc.Driver
-  #    schema: classpath:schema.sql  # 새로 추가된 옵션 src/main/resource/schema.sql
-  #    data: classpath:data.sql      # 새로 추가된 옵션, src/main/resource/data.sql 에 있는 내용 실행
-  #    initialization-mode: always   # 새로 추가된 옵션 위의 schema.sql 파일을 실행 시켜 준다.
   jackson:
     property-naming-strategy: SNAKE_CASE
 
-#logging:
-#  level:
-#    root: info
-#    com.zaxxer.hikari.HikariConfig: debug
-#    org.hibernate.SQL: debug
-#    hibernate.type.descriptor.sql.BasicBinder: trace
+logging:
+  level:
+    root: info
+    com.zaxxer.hikari.HikariConfig: debug
+    org.hibernate.SQL: debug
+    hibernate.type.descriptor.sql.BasicBinder: trace
+
+product:
+  api:
+    url: http://localhost:8080/api/product
