--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,11 +1,18 @@
-server :
-  port : 8081
+server:
+  port: 8090
+
+eureka:
+  client:
+    register-with-eureka: true
+    fetch-registry: true
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
+
 spring:
+  application:
+    name: simple-msa-order
   jpa:
-#    show-sql: true
-    properties:
-      hibernate:
-        format_sql : true
+    show-sql: true
   datasource:
     url: jdbc:mysql://localhost:3306/whatap?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul&allowPublicKeyRetrieval=true&createDatabaseIfNotExist=true # 새로 추가된 옵션 schema 가 없는 경우 생성
     username: root
@@ -20,6 +27,7 @@ logging:
     com.zaxxer.hikari.HikariConfig: debug
     org.hibernate.SQL: debug
     hibernate.type.descriptor.sql.BasicBinder: trace
+
 
 product:
   api:
